--- a/index copy.html
+++ b/index copy.html
@@ -2,10 +2,10 @@
 <html lang="en-US">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<title>DevMLOps | DevOps & MLOps Articles </title>
-	<meta name="description" content="DevOps & MLOps Articles">
+	<title>Katen - Minimal Blog & Magazine HTML Theme</title>
+	<meta name="description" content="Katen - Minimal Blog & Magazine HTML Theme">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-	<link rel="shortcut icon" type="image/x-icon" href="images/favicon-32x32.png">
+	<link rel="shortcut icon" type="image/x-icon" href="images/favicon.png">
 
 	<!-- STYLES -->
 	<link rel="stylesheet" href="css/bootstrap.min.css" type="text/css" media="all">
